# fraudlogix

./: .gitignore  CUDA_SETUP.md  Cargo.toml  README.md  build.rs  main.py  pyproject.toml
cuda/: .clang-format  pow_solver.cu  pow_solver.h  sha256.cuh  sha256.h
src/: backoff.rs  client.rs  csv_handler.rs  fallback_ip.rs  fingerprint.rs  lib.rs  main.rs  pow.rs  proxy.rs  types.rs  worker.rs
