[package]
name = "fraudlogix-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client with Chrome emulation
wreq = "6.0.0-rc.28"
wreq-util = { version = "3.0.0-rc.10", features = ["tower-delay"] }

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CSV handling
csv = "1.3"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# URL encoding
percent-encoding = "2.3"

# Random generation
rand = "0.8"

# Cryptographic hashing for PoW
sha2 = "0.10"
hex = "0.4"

[features]
default = []
cuda = []
