[project]
name = "fraudlogix-checker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["rnet>=3.0.0rc22"]

[tool.ruff]
line-length = 150
indent-width = 2

[tool.ruff.lint]
ignore = ["E701", "E702", "E731", "E741", "E401"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
